--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sklep - Twoje E-booki</title>
+  <title>Digital Master</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="site-header">
-    <h1>Twój Sklep z e-bookami</h1>
-    <p class="tagline">Opis sklepu — kilka zdań o tym, co sprzedajesz.</p>
+    <h1>Digital Master</h1>
+    <p class="tagline">Digital Master - Zacznij swoją przygodę z Digitalem</p>
   </header>
 
   <main class="container">
@@ -18,12 +18,12 @@
 
       <!-- Powiel poniższy blok dla każdego produktu -->
       <article class="product-card">
-        <img src="images/product1.jpg" alt="Okładka produktu 1" class="product-img">
+        <img src="images/beginner.png" alt="Okładka produktu 1" class="product-img">
         <div class="product-info">
-          <h3>Moja książka 1</h3>
-          <p>Krótki opis e-booka. Długość: ~80-200 znaków.</p>
+          <h3>Digital Beginner</h3>
+          <p>Ten Kurs jest skierowany do osób które dopiero zaczynają swoją przygodę z Digital Marketingiem</p>
           <div class="product-actions">
-            <a class="btn" href="product1.html">Kup (BLIK przez Tipply)</a>
+            <a class="btn" href="product1.html">Kup przez BLIK</a>
           </div>
         </div>
       </article>
@@ -33,7 +33,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© Twój Nick — wszystkie prawa zastrzeżone.</p>
+    <p>© Zespół Digital Masters — wszystkie prawa zastrzeżone.</p>
   </footer>
 </body>
 </html>
