--- a/product1.html
+++ b/product1.html
@@ -3,25 +3,26 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Produkt — Moja książka</title>
+  <title>Produkt — Digital Beginner</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="site-header">
-    <h1>Moja książka 1</h1>
+    <h1>Digital Beginner</h1>
   </header>
 
   <main class="container">
     <section class="product-detail">
-      <img src="images/product1.jpg" alt="Okładka" class="product-detail-img">
+      <img src="images/beginner.png" alt="Okładka" class="product-detail-img">
       <div class="product-detail-info">
-        <h2>Pełny tytuł e-booka</h2>
-        <p>Tu wklej długi opis produktu: o czym jest książka, ile stron, kto powinien kupić itp.</p>
+        <h2>Digital Beginner - Zacznij Już Dziś</h2>
+        <p>Ten e-book to praktyczny przewodnik, który krok po kroku wprowadzi cię w świat digital marketingu – bez zbędnego gadania, tylko konkret i działania. Dzięki niemu szybko ogarniesz podstawy, poznasz najważniejsze narzędzia i zaczniesz budować swoją obecność online jak profesjonalista.</p>
 
         <!-- ZASTĄP LINK poniżej twoim linkiem Tipply do płatności -->
         <p>
-          <a class="btn pay" href="https://tipply.pl/@TWÓJ_LINK_DO_PŁATNOŚCI" target="_blank" rel="noopener noreferrer">
-            Zapłać BLIK-iem przez Tipply
+          <a class="btn pay" href="https://tipply.pl/@digitalmaster?redirect=https://xcrossyx.github.io/digitalmaster/dzieki.html
+" target="_blank" rel="noopener noreferrer">
+            Zapłać BLIK-iem
           </a>
         </p>
 
@@ -31,7 +32,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© Twój Nick</p>
+    <p>© Zespół Digital Master</p>
   </footer>
 </body>
 </html>
