--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!-- Powiel poniższy blok dla każdego produktu -->
       <article class="product-card">
-        <img src="images/beginner.png" alt="Okładka produktu 1" class="product-img">
+        <img src="images/beginner.png" alt="" class="product-img">
         <div class="product-info">
           <h3>Digital Beginner</h3>
           <p>Ten Kurs jest skierowany do osób które dopiero zaczynają swoją przygodę z Digital Marketingiem</p>
